--- a/Frontend/Main/index.html
+++ b/Frontend/Main/index.html
@@ -63,8 +63,8 @@
               <li>
                 <a href="about.html">About Us</a>
               </li>
-              <li class="d-lg-none"><a href="Registration Form/index.html">Register</a></li>
-              <li class="d-lg-none"><a href="Login Form/index.html">Log In</a></li>
+              <li class="d-lg-none"><a href="RegistrationForm/index.html">Register</a></li>
+              <li class="d-lg-none"><a href="LoginForm/index.html">Log In</a></li>
             </ul>
           </nav>
           
@@ -140,7 +140,7 @@
       <div class="job-list" id="jobs">
         <div class="job-card">
             <div class="job-name">
-                <img src="Images/Tesla.svg" alt="" class="job-profile">
+                <img src="images/Tesla.svg" alt="" class="job-profile">
                 <div class="job-detail">
                     <h4>Tesla</h4>
                     <h3>Mechanical Engineer</h3>
@@ -157,7 +157,7 @@
         </div>
         <div class="job-card">
             <div class="job-name">
-                <img src="Images/Ebay.svg" alt="" class="job-profile">
+                <img src="images/Ebay.svg" alt="" class="job-profile">
                 <div class="job-detail">
                     <h4>Ebay</h4>
                     <h3>Business Development</h3>
@@ -174,7 +174,7 @@
         </div>
         <div class="job-card">
             <div class="job-name">
-                <img src="Images/TikTok.svg" alt="" class="job-profile">
+                <img src="images/TikTok.svg" alt="" class="job-profile">
                 <div class="job-detail">
                     <h4>Tiktok</h4>
                     <h3>Digital Marketing</h3>
@@ -191,7 +191,7 @@
         </div>
         <div class="job-card">
             <div class="job-name">
-                <img src="Images/Youtube.svg" alt="" class="job-profile">
+                <img src="images/Youtube.svg" alt="" class="job-profile">
                 <div class="job-detail">
                     <h4>Youtube</h4>
                     <h3>UI UX Designer</h3>
@@ -208,7 +208,7 @@
         </div>
         <div class="job-card">
             <div class="job-name">
-                <img src="Images/Amazon.svg" alt="" class="job-profile">
+                <img src="images/Amazon.svg" alt="" class="job-profile">
                 <div class="job-detail">
                     <h4>Amazon</h4>
                     <h3>Software Engineer</h3>
@@ -223,10 +223,9 @@
                 Posted an hour ago
             </div>
         </div>
-        <button class="job-more">
-            More List
-        </div>
-    </div>
+
+        <button class="job-more" type="button">More List</button>
+      </div>
 
     
     <footer class="site-footer">
